fix(event-chart): Fixes an issue where the default color of chart events did not align with the legend item.

--- a/components/event-chart/src/event-chart-legend.scss
+++ b/components/event-chart/src/event-chart-legend.scss
@@ -16,7 +16,7 @@
 .dt-event-chart-legend-symbol
   ::ng-deep
   .dt-event-chart-legend-symbol-background {
-  fill: $purple-300;
+  fill: $purple-600;
 }
 
 .dt-event-chart-legend-symbol-conversion
